 Version 0.49
 ============

 Released on 

 New features and improvements:

   - 

 Bug fixes:

   - ofaIDateFilter: keep both from and to dates as user preferences (todo #978).

 Other changes:

   - Do not install the resources which are managed as GResource (todo #970).
   - myFileMonitor: migrate to G_ADD_PRIVATE (todo #994).
   - myProgressBar: migrate to G_ADD_PRIVATE (todo #994).

-----------------------------------------------------------------------
 Version 0.48
 ============

 Released on 2016-02-14

 New features and improvements:

   - ofaAccountFrameBin: scroll the treeview up to the preselected account (todo #988).
   - ofaAccountProperties: display an error message + run non modal (todo #984).
   - ofaBatPage: now dynamically auto-updates on conciliations (todo #979).
   - ofaBatPage: select newly imported BAT file (todo #993).
   - ofaBatSelect: display unused count (todo #990) .
   - ofaITreeviewColumn: add ofaIConcil 'Type' column for display selection.
   - ofaRenderPage: no more disabled 'Render' button after rendering (todo #980).

 Bug fixes:

   - import-bourso-pdf/ofaImporter: accept empty lines on bottom page.
   - ofaExportAssistant: fix type selection (todo #982).
   - ofaGuidedInput: fix fields reset after validation (todo #973).
   - ofaLedgerClose: remove unused (and badly cast) box. 
   - ofaReconciliationPage: does not try to associate a batline to a deleted entry.
   - ofaReconciliationPage: improve concililation groups management (todo #976).
   - ofaReconciliationPage: fix concililation/unconciliation operations (todo #977).
   - ofaReconciliationPage: fix display of new entry conciliation date (todo #991).
   - ofoAccount: fix ofo_account_get_by_number() assertion (todo #972).
   - ofoBat: fix setting imported identifier on import (todo #989).
   - ofoBat: do not free collection on import (todo #795).
   - ofoEntry: remove warning on conciliation delete.
   - ofoEntry: fix entry import.

 Other changes:
